<resources>
    <string name="app_name">学Android</string>

    <!--tab-->
    <string name="nav_title_home">首页</string>
    <string name="nav_title_system">公众号</string>
    <string name="nav_title_search">搜索</string>
    <string name="nav_title_project">项目</string>
    <string name="nav_title_user">我的</string>

    <!--Home-->
    <string name="home_tab_recommend">推荐</string>
    <string name="home_tab_square">广场</string>
    <string name="home_tab_question_and_answer">问答</string>
    <string name="home_tab_project">最新项目</string>


    <string name="article_retry">点击重新加载</string>

    <!--Search-->
    <string name="search_hint">搜索文章、用户、标签</string>
    <string name="search_rank">排行榜</string>
    <string name="search_system">体系</string>
    <string name="search_navigation">导航</string>
    <string name="search_topic">话题</string>
    <string name="search_top_article">热门文章</string>
    <string name="rank_rule">排名规则</string>
    <string name="rank_level">lv.%d</string>
    <string name="rank_coinCount">积分:%d</string>

    <!--Splash-->
    <string name="login_user_name_error_msg">账户不能为空！</string>
    <string name="login_password_error_msg">密码不能为空！</string>
    <string name="login_user_name_hint">账号</string>
    <string name="login_password_hint">密码</string>

    <!--我的-->
    <string name="user_profile_login">登录</string>

</resources>
