<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_title_home" />

    <item
        android:id="@+id/menu_system"
        android:icon="@drawable/ic_system"
        android:title="@string/nav_title_system" />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_title_search" />

    <item
        android:id="@+id/menu_project"
        android:icon="@drawable/ic_project"
        android:title="@string/nav_title_project" />

    <item
        android:id="@+id/menu_user_profile"
        android:icon="@drawable/ic_user_profile"
        android:title="@string/nav_title_user" />

</menu>
